--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,55 +1,115 @@
 /* @font-face {
-    font-family: 'Inter';
-    src: url('./inter/static/Inter-Regular.ttf') format('ttf');
-} */
-
-
-@font-face {
-    font-family: 'Inter-Black';
-    src: url('./inter/static/Inter-Black.ttf') format('ttf');
+    font-family: "Inter-Black";
+    src: url("/inter/static/Inter-Black.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-Bold';
-    src: url('./inter/static/Inter-Bold.ttf') format('ttf');
+    font-family: "Inter-Bold";
+    src: url("/inter/static/Inter-Bold.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-ExtraBold';
-    src: url('./inter/static/Inter-ExtraBold.ttf') format('ttf');
+    font-family: "Inter-ExtraBold";
+    src: url("/inter/static/Inter-ExtraBold.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-ExtraLight';
-    src: url('./inter/static/Inter-ExtraLight.ttf') format('ttf');
+    font-family: "Inter-ExtraLight";
+    src: url("/inter/static/Inter-ExtraLight.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-Light';
-    src: url('./inter/static/Inter-Light.ttf') format('ttf');
+    font-family: "Inter-Light";
+    src: url("/inter/static/Inter-Light.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-Medium';
-    src: url('./inter/static/Inter-Medium.ttf') format('ttf');
+    font-family: "Inter-Medium";
+    src: url("/inter/static/Inter-Medium.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-Regular';
-    src: url('./inter/static/Inter-Regular.ttf') format('ttf');
+    font-family: "Inter-Regular";
+    src: url("/inter/static/Inter-Regular.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-SemiBold';
-    src: local('Inter-SemiBold'),
-    url('~@/assets/css/inter/static/Inter-SemiBold.ttf') format('ttf');
+    font-family: "Inter-SemiBold";
+    src:
+        local("Inter-SemiBold"),
+        url("./Inter-SemiBold.ttf") format("ttf");
 }
 
 @font-face {
-    font-family: 'Inter-Thin';
-    src: url('./inter/static/Inter-Thin.ttf') format('ttf');
+    font-family: "Inter-Thin";
+    src: url("/inter/static/Inter-Thin.ttf") format("ttf");
 }
 
-body{
-    @apply font-Inter
+ */
+
+@font-face {
+    font-family: "Inter-Black";
+    src: url("./inter/static/Inter-Black.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-Bold";
+    src: url("./inter/static/Inter-Bold.ttf") format("truetype");
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-ExtraBold";
+    src: url("./inter/static/Inter-ExtraBold.ttf") format("truetype");
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-ExtraLight";
+    src: url("./inter/static/Inter-ExtraLight.ttf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-Light";
+    src: url("./inter/static/Inter-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-Medium";
+    src: url("./inter/static/Inter-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-Regular";
+    src: url("./inter/static/Inter-Regular.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-SemiBold";
+    src: url("./inter/static/Inter-SemiBold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Inter-Thin";
+    src: url("./inter/static/Inter-Thin.ttf") format("truetype");
+    font-weight: 100;
+    font-style: normal;
+}
+
+body {
+    font-family: "Inter-Regular", sans-serif;
 }
